# plasmo

./: .gitignore  .pre-commit-config.yaml  README.md  desmata  docs_todo.md  flake.nix  pyproject.toml
.helix/: languages.toml
doc/: desmata.html  index.html  plasmo.html  search.js
doc/desmata/cli/: common.html  dsm.html
doc/plasmo/: cli.html
docs/: desmata.html  search.js
docs/desmata/: cli.html  config.html  consts.html  docs.html  interface.html
docs/desmata/cli/: desmata.html
src/desmata/: __init__.py  cell.py  cell_factory.py  cell_utils.py  cli.py  config.py  consts.py  db.py  docs.py  exceptions.py  factory_utils.py  foo  fs.py  get.py  git.py  higher_protocols.py  interface.py  log.py  lower_protocols.py  messages.py  models.py  nix.py  protocols.py  tool.py
src/desmata/builtins/: cell.py  flake.nix
src/desmata/cli/: common.py  desmata.py  dsm.py
src/plasmo/: cli.py
test/: conftest.py  test_context.py  test_hello.py  test_injection.py  test_ipfscli.py  test_logging.py
test/samples/greeter/: cell.py  flake.nix  result
test/samples/greeter/hello/: README.md  hello.nimble  hello.nix  lock.json
test/samples/greeter/hello/src/: hello.nim
test/samples/prokaryote/: desmata.py
