[tool.poetry]
name = "desmata"
version = "0.1.0"
description = ""
authors = ["Matt Rixman <MatrixManAtYrService@users.noreply.github.com>"]
readme = "README.md"
packages = [
  { include = "desmata", from ="src"},
]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
pytest = "^7.4.4"
pdoc = "^14.4.0"
xdg-base-dirs = "^6.0.1"
pydantic = "^2.6.3"
pydantic-settings = "^2.3.3"
inject = "^5.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
poetry = "poetry.console.application:main"
desmata = "desmata.cli.desmata:cli"
dsm = "desmata.cli.dsm:cli"
